...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" tag="100" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J3-Fd-BB5">
                                                    <rect key="frame" x="335" y="6" width="30" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="priorityButton"/>
                                                    <state key="normal" title="!"/>
                                                </button>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="taskCell"/>
                                        <connections>
...
                            <constraint firstItem="4sw-kJ-NQ9" firstAttribute="top" secondItem="JtY-Ys-Oah" secondAttribute="bottom" id="Mqi-xW-qiA"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4sw-kJ-NQ9" secondAttribute="bottom" id="RrT-Vo-YWo"/>
                            <constraint firstItem="4sw-kJ-NQ9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="nF9-Wn-YKp"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="TODO" id="bOk-JE-2xS"/>
                    <connections>
                        <outlet property="searchTextField" destination="tGs-Bi-iUn" id="tL4-qy-oAZ"/>
                        <outlet property="sortButton" destination="Tfa-ns-TRz" id="e55-AL-tO2"/>
                        <outlet property="tableView" destination="4sw-kJ-NQ9" id="1U3-2A-LTF"/>
                    </connections>
                </viewController>
...
